[tool.poetry]
name = "sub-agent-autopt"
version = "0.1.0"
description = "多Agent自动化安全测试系统"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "agents"}, {include = "config"}, {include = "utils"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-core = "^0.3.0"
requests = "^2.31.0"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

